--- a/about.css
+++ b/about.css
@@ -14,42 +14,35 @@
 }
 
 .content-text {
-  justify-content: center;
-  align-items: center;
+  display: flex;
+  flex-direction: column;
   font-size: 1rem;
-  padding: 1rem;
-  width: 30%;
-  padding: 10px;
+  width: 35%;
 }
 .content-image {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 40%;
+  width: 35%;
 }
 .content-image img {
-  width: 80%;
+  width: 100%;
   box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
 }
 .section h2 {
   font-size: 2rem;
   text-align: left;
-  padding-bottom: 20px;
+  padding-bottom: 2rem;
 }
 .section p {
   font-size: 1rem;
   line-height: 1.5rem;
-  text-align: left;
-  padding-top: 20px;
+  padding-top: 2rem;
 }
 
 .content-section {
   justify-content: center;
   font-size: 1rem;
-  padding: 1rem;
-  width: 30%;
-  gap: 20px;
+  width: 35%;
   padding-bottom: 5rem;
 }
 .content-section h3 {
@@ -61,4 +54,109 @@
   font-size: 1rem;
   text-align: left;
   padding-top: 20px;
+}
+
+@media (max-width: 768px) {
+  .hero-content {
+    height: 100vh;
+  }
+  .button {
+    width: 10vw;
+  }
+  .button a {
+    width: 10vw;
+    font-size: 0.7rem;
+  }
+  .logo img {
+    width: 20vw;
+  }
+  .section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    width: 100%;
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .content-text {
+    display: flex;
+    width: 80%;
+  }
+  .content-image {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    width: 70%;
+  }
+  .content-image img {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    width: 100%;
+  }
+  .section {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+  }
+  .content-section {
+    width: 80%;
+  }
+}
+@media (max-width: 480px) {
+  .hero-content {
+    height: 100vh;
+  }
+  .button {
+    width: 10vw;
+  }
+  .button a {
+    width: 10vw;
+    font-size: 0.7rem;
+  }
+  .logo img {
+    width: 20vw;
+  }
+  .section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    width: 100%;
+  }
+  .content-text {
+    display: flex;
+    width: 80%;
+  }
+  .content-image {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    width: 70%;
+  }
+  .content-image img {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    width: 100%;
+  }
+  .section {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .content-section {
+    width: 80%;
+  }
 }
