--- a/project.css
+++ b/project.css
@@ -17,7 +17,7 @@
   justify-content: center;
   align-items: center;
   background-color: #e7e7e7;
-  padding: 5rem;
+  padding-bottom: 3rem;
 }
 .container {
   display: flex;
@@ -29,7 +29,7 @@
 
 .container h2 {
   font-size: 2.3rem;
-  font-family: montserrat;
+  font-family: "montserrat", sans-serif;
   font-weight: bold;
   color: black;
   text-align: left;
@@ -52,22 +52,21 @@
 }
 .h4 {
   font-size: 1.5rem;
-  font-family: montserrat;
+  font-family: "montserrat", sans-serif;
   font-weight: bold;
   color: black;
   text-align: left;
-  margin-top: 2rem;
 }
 .h2 {
-  font-size: 1.5rem;
-  font-family: notosans sans;
+  font-size: 1rem;
+  font-family: "notosans sans", sans-serif;
   color: black;
   text-align: left;
   margin-top: 1rem;
 }
 .main-section p {
   font-size: 1rem;
-  font-family: notosans sans;
+  font-family: "notosans sans", sans-serif;
   color: black;
   text-align: left;
   padding-top: 1.5rem;
@@ -91,4 +90,122 @@
   display: flex;
   width: 30%;
   border-radius: 10px;
+}
+@media (max-width: 768px) {
+  .hero-content {
+    height: 100vh;
+  }
+  .hero-content {
+    height: 100vh;
+  }
+  .button {
+    width: 10vw;
+  }
+  .button a {
+    width: 10vw;
+    font-size: 0.7rem;
+  }
+  .logo img {
+    width: 20vw%;
+  }
+  .navlink a {
+    width: 100vw;
+  }
+  .container {
+    padding: 0;
+  }
+  .section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    width: 90%;
+  }
+  .content-text {
+    display: flex;
+    width: 90%;
+  }
+  .content-image {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    width: 90%;
+  }
+  .content-image img {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    width: 100%;
+  }
+  .section {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+  }
+  .content-section {
+    width: 80%;
+  }
+}
+@media (max-width: 480px) {
+  .hero-content {
+    height: 100vh;
+  }
+  .hero-content h1 {
+    font-size: 1.5rem;
+  }
+  .button {
+    width: 10vw;
+  }
+  .button a {
+    width: 10vw;
+    font-size: 0.7rem;
+  }
+  .logo img {
+    width: 20vw;
+  }
+  .navlink a {
+    width: 100vw;
+  }
+  .container {
+    padding: 0;
+  }
+  .section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    width: 90%;
+  }
+  .content-text {
+    display: flex;
+    width: 90%;
+  }
+  .content-image {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    width: 90%;
+  }
+  .content-image img {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    width: 100%;
+  }
+  .section {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+  }
+  .content-section {
+    width: 80%;
+  }
 }
