--- a/service.css
+++ b/service.css
@@ -18,20 +18,19 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-items: center;
   background-color: #e7e7e7;
-  font-family: notosans sans-serif;
+}
+.title1 h2 {
+  font-family: "montserrat", sans-serif;
   font-size: 2rem;
-  padding-top: 2rem;
-  padding-left: 6rem;
-  padding-right: 6rem;
+  padding: 2rem;
 }
 .title1 p {
-  padding-top: 20px;
-  font-size: 1.5rem;
-  font-family: notosans sans-serif;
+  padding-top: 2rem;
+  font-size: 1rem;
+  font-family: "Notosans", sans-serif;
   text-align: center;
-  padding-left: 6rem;
-  padding-right: 6rem;
 }
 .container {
   display: flex;
@@ -47,6 +46,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
   padding-top: 2rem;
   background-color: #e7e7e7;
 }
@@ -58,8 +58,122 @@
   padding-top: 2rem;
   background-color: #e7e7e7;
 }
+
 .content img {
   box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   max-width: 100%;
+}
+
+@media (max-width: 768px) {
+  .hero-content {
+    height: 100vh;
+  }
+  .button {
+    width: 10vw;
+  }
+  .button a {
+    width: 10vw;
+    font-size: 0.7rem;
+  }
+  .logo img {
+    width: 20vw;
+  }
+  .navlink a {
+    width: 100vw;
+  }
+  .section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    width: 100%;
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .content-text {
+    display: flex;
+    width: 80%;
+  }
+  .content-image {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    width: 70%;
+  }
+  .content-image img {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    width: 100%;
+  }
+  .section {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+  }
+  .content-section {
+    width: 80%;
+  }
+}
+@media (max-width: 480px) {
+  .hero-content {
+    height: 100vh;
+  }
+  .button a {
+    width: 10vw;
+    font-size: 0.7rem;
+  }
+  .button {
+    width: 10vw;
+  }
+  .logo img {
+    width: 20vw;
+  }
+  .navlink a {
+    width: 100vw;
+  }
+  .title1 h2 {
+    display: flex;
+    text-align: center;
+  }
+  .section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    width: 100%;
+  }
+  .content-text {
+    display: flex;
+    width: 80%;
+  }
+  .content-image {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    width: 70%;
+  }
+  .content-image img {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    width: 100%;
+  }
+  .section {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+  }
+  .content-section {
+    width: 80%;
+  }
 }
