--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ Font Titre: Montserrat
   background-color: #fa2056;
   color: white;
   font-size: 1rem;
-  font-family: Noto Sans, sans-serif;
+  font-family: "Noto Sans", sans-serif;
   font-weight: bold;
   padding: 10px 20px;
   cursor: pointer;
@@ -52,7 +52,7 @@ Font Titre: Montserrat
   align-items: center;
   list-style: none;
   color: white;
-  font-family: Noto Sans, sans-serif;
+  font-family: "Noto Sans", sans-serif;
   font-size: 1rem;
   gap: 35px;
 }
@@ -66,7 +66,7 @@ Font Titre: Montserrat
 .cta-button {
   background-color: #fa2056;
   color: white;
-  font-family: Noto Sans, sans-serif;
+  font-family: "Noto Sans", sans-serif;
   font-weight: bold;
   padding: 10px 20px;
   cursor: pointer;
@@ -77,7 +77,7 @@ Font Titre: Montserrat
 .hero-content {
   color: white;
   text-align: center;
-  font-family: Montserrat, sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: bold;
   display: flex;
   flex-direction: column;
@@ -142,7 +142,7 @@ Font Titre: Montserrat
 .upcoming-events h2 {
   font-size: 2rem;
   color: black;
-  font-family: montserrat, sans-serif;
+  font-family: "montserrat", sans-serif;
   background-color: #e7e7e7;
   padding-bottom: 20px;
 }
@@ -176,14 +176,14 @@ Font Titre: Montserrat
 }
 .event-trek h3 {
   font-size: 1.5rem;
-  font-family: montserrat, sans-serif;
+  font-family: "montserrat", sans-serif;
   margin-bottom: 20px;
   margin-top: 20px;
   color: black;
 }
 .event-trek p {
   font-size: 1rem;
-  font-family: notosans, sans-serif;
+  font-family: "notosans", sans-serif;
   margin-bottom: 20px;
   color: #363636;
 }
@@ -214,14 +214,14 @@ Font Titre: Montserrat
 }
 .event-walk h3 {
   font-size: 1.5rem;
-  font-family: montserrat, sans-serif;
+  font-family: "montserrat", sans-serif;
   margin-bottom: 20px;
   margin-top: 20px;
   color: black;
 }
 .event-walk p {
   font-size: 1rem;
-  font-family: notosans, sans-serif;
+  font-family: "notosans", sans-serif;
   margin-bottom: 20px;
   color: #363636;
 }
@@ -270,7 +270,7 @@ Font Titre: Montserrat
 }
 .explore h2 {
   font-size: 2rem;
-  font-family: montserrat, sans-serif;
+  font-family: "montserrat", sans-serif;
   font-weight: bold;
   color: white;
 }
@@ -281,7 +281,7 @@ Font Titre: Montserrat
 }
 .explore p {
   font-size: 1rem;
-  font-family: Notosans, sans-serif;
+  font-family: "Notosans", sans-serif;
   color: white;
 }
 .cta-button {
@@ -319,14 +319,14 @@ Font Titre: Montserrat
   padding-bottom: 30px;
 }
 .tours h2 {
-  font-size: 1.5r
+  font-size: 1.5rem;
   padding-bottom: 20px;
   color: black;
-  font-family: montserrat, sans-serif;
+  font-family: "montserrat", sans-serif;
 }
 .tours p {
   font-size: 1rem;
-  font-family: notosans, sans-serif;
+  font-family: "notosans", sans-serif;
   text-align: left;
   margin-top: 20px;
   padding-bottom: 50px;
@@ -385,8 +385,8 @@ Font Titre: Montserrat
 }
 
 /* Media Queries */
-@media(max-width:992px) {
-   .citation img {
+@media (max-width: 992px) {
+  .citation img {
     display: flex;
     position: static;
     flex-direction: column;
@@ -408,6 +408,7 @@ Font Titre: Montserrat
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 1rem;
   }
   /* }
   .menu-burger {
@@ -440,14 +441,14 @@ Font Titre: Montserrat
   .explore .none {
     display: none;
   }
-  .tours .tours-content .cta-button{
+  .tours .tours-content .cta-button {
     display: flex;
     width: 100%;
     font-size: 1rem;
   }
-  }
+}
 @media (max-width: 480px) {
-  .navlink{
+  .navlink {
     display: flex;
     flex-direction: column;
     align-items: end;
@@ -463,13 +464,13 @@ Font Titre: Montserrat
     gap: 1rem;
   }
   .hero-content h2 {
-    font-size: 1.rem;
+    font-size: 1rem;
     gap: 1rem;
   }
   .hero-content {
     height: 100hv;
   }
-  .logo img{
+  .logo img {
     width: 30vw;
   }
   .navlink a {
@@ -482,33 +483,33 @@ Font Titre: Montserrat
     justify-content: center;
     align-items: center;
   }
-  .citation img{
+  .citation img {
     width: 10%;
   }
-  .citation .text{
+  .citation .text {
     width: 80%;
   }
-  .container{
+  .container {
     flex-direction: column;
     width: 100%;
   }
-  .event-trek{
+  .event-trek {
     width: 80%;
   }
-  .event-walk{
+  .event-walk {
     width: 80%;
   }
   .explore {
-  display: flex;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url(./images/explore);
-  background-position: inherit;
-  background-size: cover;
-  background-attachment: fixed;
-  align-items: center;
-  width: 100%;
-  height: 90vh;
-}
+    display: flex;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+      url(./images/explore);
+    background-position: inherit;
+    background-size: cover;
+    background-attachment: fixed;
+    align-items: center;
+    width: 100%;
+    height: 90vh;
+  }
   .tours {
     display: flex;
     flex-direction: column;
@@ -525,13 +526,13 @@ Font Titre: Montserrat
   .image-content-1 {
     width: 90%;
   }
-  .image-content-1 img{
+  .image-content-1 img {
     width: 90%;
   }
-  .image-content-2{
+  .image-content-2 {
     width: 90%;
   }
-  .image-content-2 img{
-  width: 90%;
+  .image-content-2 img {
+    width: 90%;
   }
-  }
+}
