--- a/css/about.css
+++ b/css/about.css
@@ -1,7 +1,7 @@
-@import url(./footer.css);
-@import url(./header.css);
-@import url(./nav.css);
-@import url(./main.css);
+@import url(../css/footer.css);
+@import url(../css/header.css);
+@import url(../css/nav.css);
+@import url(../css/main.css);
 * {
   margin: 0;
   padding: 0;
@@ -10,7 +10,7 @@
   height: 60vh;
   width: 100vw;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url(./images/landscape.jpg);
+    url(../images/landscape.jpg);
 }
 
 .content-text {
