--- a/css/project.css
+++ b/css/project.css
@@ -1,71 +1,100 @@
-@import url(./footer.css);
-@import url(./header.css);
-@import url(./nav.css);
-@import url(./main.css);
+@import url(../css/footer.css);
+@import url(../css/header.css);
+@import url(../css/nav.css);
+@import url(../css/main.css);
 * {
   margin: 0;
   padding: 0;
 }
-
 .header {
   height: 60vh;
   width: 100vw;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url(./images/mountain.jpg);
+    url(../images/project-background.jpg);
 }
-
-.title1 {
+.main-section {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  justify-items: center;
   background-color: #e7e7e7;
-}
-.title1 h2 {
-  font-family: "montserrat", sans-serif;
-  font-size: 2rem;
-  padding: 2rem;
-}
-.title1 p {
-  padding-top: 2rem;
-  font-size: 1rem;
-  font-family: "Notosans", sans-serif;
-  text-align: center;
+  padding-bottom: 3rem;
 }
 .container {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   background-color: #e7e7e7;
-  padding-bottom: 2rem;
 }
-.section-content {
-  width: 70%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  padding-top: 2rem;
+
+.container h2 {
+  font-size: 2.3rem;
+  font-family: "montserrat", sans-serif;
+  font-weight: bold;
+  color: black;
+  text-align: left;
+  margin-top: 1rem;
   background-color: #e7e7e7;
 }
 .content {
   display: flex;
   flex-direction: column;
+  justify-content: left;
+  align-items: left;
+  width: 70%;
+}
+.sous-titre {
+  display: flex;
   align-items: center;
+  justify-content: left;
+  gap: 1rem;
+  margin-top: 5rem;
+}
+.h4 {
+  font-size: 1.5rem;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  color: black;
+  text-align: left;
+}
+.h2 {
+  font-size: 1rem;
+  font-family: "notosans sans", sans-serif;
+  color: black;
+  text-align: left;
+  margin-top: 1rem;
+}
+.main-section p {
+  font-size: 1rem;
+  font-family: "notosans sans", sans-serif;
+  color: black;
+  text-align: left;
+  padding-top: 1.5rem;
+}
+.carrousel {
+  display: flex;
   justify-content: center;
+  align-items: center;
+  width: 75%;
   padding-top: 2rem;
-  background-color: #e7e7e7;
 }
 
-.content img {
-  box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.2);
+.content-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  width: 100%;
+}
+.content-image img {
+  display: flex;
+  width: 30%;
   border-radius: 10px;
-  max-width: 100%;
 }
-
 @media (max-width: 768px) {
+  .hero-content {
+    height: 100vh;
+  }
   .hero-content {
     height: 100vh;
   }
@@ -77,30 +106,31 @@
     font-size: 0.7rem;
   }
   .logo img {
-    width: 20vw;
+    width: 20vw%;
   }
   .navlink a {
     width: 100vw;
+  }
+  .container {
+    padding: 0;
   }
   .section {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-items: center;
-    width: 100%;
-    padding-left: 0;
-    padding-right: 0;
+    width: 90%;
   }
   .content-text {
     display: flex;
-    width: 80%;
+    width: 90%;
   }
   .content-image {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-items: center;
-    width: 70%;
+    width: 90%;
   }
   .content-image img {
     display: flex;
@@ -124,12 +154,15 @@
   .hero-content {
     height: 100vh;
   }
-  .button a {
-    width: 10vw;
-    font-size: 0.7rem;
+  .hero-content h1 {
+    font-size: 1.5rem;
   }
   .button {
     width: 10vw;
+  }
+  .button a {
+    width: 10vw;
+    font-size: 0.7rem;
   }
   .logo img {
     width: 20vw;
@@ -137,27 +170,26 @@
   .navlink a {
     width: 100vw;
   }
-  .title1 h2 {
-    display: flex;
-    text-align: center;
+  .container {
+    padding: 0;
   }
   .section {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-items: center;
-    width: 100%;
+    width: 90%;
   }
   .content-text {
     display: flex;
-    width: 80%;
+    width: 90%;
   }
   .content-image {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-items: center;
-    width: 70%;
+    width: 90%;
   }
   .content-image img {
     display: flex;
