--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ Font Titre: Montserrat
   height: 90vh;
   width: 100%;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url(./images/hero);
+    url(../images/hero);
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
@@ -239,7 +239,7 @@ Font Titre: Montserrat
 .explore {
   display: flex;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url(./images/explore);
+    url(../images/explore);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
